# github-repo-analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-05-07-github-repo-analyzer.md
docs/superpowers/specs/: 2026-05-07-github-repo-analyzer-design.md
src/repo_analyzer/: __main__.py  cli.py  graph.py  llm.py  state.py
src/repo_analyzer/nodes/: analyze_code.py  fetch_meta.py  find_similar.py  plan.py  reflect.py  synthesize.py  web_context.py
src/repo_analyzer/prompts/: analyze_code.py  find_similar.py  plan.py  reflect.py  synthesize.py  web_context.py
src/repo_analyzer/tools/: github.py  tavily.py
tests/: conftest.py  test_cli.py  test_graph_smoke.py  test_live.py  test_llm.py  test_tools_github.py  test_tools_tavily.py
tests/fixtures/: repo_response.json
tests/test_nodes/: test_analyze_code.py  test_fetch_meta.py  test_find_similar.py  test_plan.py  test_reflect.py  test_synthesize.py  test_web_context.py
